--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -136,6 +136,7 @@
               </select>
               <input id="urlAPIID" class="urlAPI" type="http://apiFree" name="api" style="width: 500px;border-radius: 0px 5px 5px 0px; margin: 10px; margin-left: -5px;">
               <input type="submit" class="btn btn-primary" style="width: 100px; height: 27px; margin-bottom: 5px; padding-top: 0px;" value="SEND">
+              <button onclick="saveApi()" class="btn btn-dark" style="width: 100px; height: 27px; margin-bottom: 5px; padding-top: 0px;">SAVE</button>
               <br>
               <hr>
     
@@ -335,7 +336,20 @@
           </form>
         </div>
       </div>
-    </div>    
+    </div>
+    
+    <div class="row" id="save-api">
+      <div class="col-3"></div>
+      <div class="col-10">
+        <div id="formSaveApi" style="display: none;">
+          <form>
+            <h4 style="background-color: black; color: white; height: 50px; text-align: center; padding: 10px 0;">
+              SAVE REQUEST
+            </h4>
+          </form>
+        </form>
+      </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
