--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -135,8 +135,9 @@
                 <option value="put">PUT</option>
               </select>
               <input id="urlAPIID" class="urlAPI" type="http://apiFree" name="api" style="width: 500px;border-radius: 0px 5px 5px 0px; margin: 10px; margin-left: -5px;">
-              <input type="submit" class="btn btn-primary" style="width: 100px; height: 27px; margin-bottom: 5px; padding-top: 0px;" value="SEND">
-              <button onclick="saveApi()" class="btn btn-dark" style="width: 100px; height: 27px; margin-bottom: 5px; padding-top: 0px;">SAVE</button>
+              <input name="submit" type="submit" class="btn btn-primary" style="width: 100px; height: 27px; margin-bottom: 5px; padding-top: 0px;" value="SEND">
+              <input id="save" name="submit" onclick="saveApi()" type="submit" class="btn btn-primary" style="width: 100px; height: 27px; margin-bottom: 5px; padding-top: 0px;" value="SAVE">
+              <!-- <button onclick="saveApi()" class="btn btn-dark" style="width: 100px; height: 27px; margin-bottom: 5px; padding-top: 0px;">SAVE</button> -->
               <br>
               <hr>
     
