--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -81,17 +81,21 @@
                     <% if(rs.listCollection){
                       for(let i=0;i<rs.listCollection.length;i++){
                         let row = rs.listCollection[i];%>
+
                         <hr>
                         <div class="row" id="eachCollection">
                           <div class="col-10" >
-                            <button style="height: 40px; border-style: hidden; background-color: rgb(235, 232, 232); margin-left: 20px; margin-top: 20px;">
-                              <svg class="bi bi-folder-plus" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M9.828 4H2.19a1 1 0 00-.996 1.09l.637 7a1 1 0 00.995.91H9v1H2.826a2 2 0 01-1.991-1.819l-.637-7a1.99 1.99 0 01.342-1.31L.5 3a2 2 0 012-2h3.672a2 2 0 011.414.586l.828.828A2 2 0 009.828 3h3.982a2 2 0 011.992 2.181L15.546 8H14.54l.265-2.91A1 1 0 0013.81 4H9.828zm-2.95-1.707L7.587 3H2.19c-.24 0-.47.042-.684.12L1.5 2.98a1 1 0 011-.98h3.672a1 1 0 01.707.293z" clip-rule="evenodd"/>
-                                <path fill-rule="evenodd" d="M13.5 10a.5.5 0 01.5.5v2a.5.5 0 01-.5.5h-2a.5.5 0 010-1H13v-1.5a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
-                                <path fill-rule="evenodd" d="M13 12.5a.5.5 0 01.5-.5h2a.5.5 0 010 1H14v1.5a.5.5 0 01-1 0v-2z" clip-rule="evenodd"/>
-                              </svg>
-                              <span style=" margin-left: 5px; margin-top: 3px; font-size: 20px;"><%= row.casetest%></span>
-                            </button>
+                            <a data-toggle="collapse" href="#api<%=row.casetest%>" aria-expanded="false" aria-controls="api<%=row.casetest%>">
+                              <button style="height: 40px; border-style: hidden; background-color: rgb(235, 232, 232); margin-left: 20px; margin-top: 20px;">
+                                <svg class="bi bi-folder-plus" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                  <path fill-rule="evenodd" d="M9.828 4H2.19a1 1 0 00-.996 1.09l.637 7a1 1 0 00.995.91H9v1H2.826a2 2 0 01-1.991-1.819l-.637-7a1.99 1.99 0 01.342-1.31L.5 3a2 2 0 012-2h3.672a2 2 0 011.414.586l.828.828A2 2 0 009.828 3h3.982a2 2 0 011.992 2.181L15.546 8H14.54l.265-2.91A1 1 0 0013.81 4H9.828zm-2.95-1.707L7.587 3H2.19c-.24 0-.47.042-.684.12L1.5 2.98a1 1 0 011-.98h3.672a1 1 0 01.707.293z" clip-rule="evenodd"/>
+                                  <path fill-rule="evenodd" d="M13.5 10a.5.5 0 01.5.5v2a.5.5 0 01-.5.5h-2a.5.5 0 010-1H13v-1.5a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+                                  <path fill-rule="evenodd" d="M13 12.5a.5.5 0 01.5-.5h2a.5.5 0 010 1H14v1.5a.5.5 0 01-1 0v-2z" clip-rule="evenodd"/>
+                                </svg>
+                                <span style=" margin-left: 5px; margin-top: 3px; font-size: 20px;"><%= row.casetest%></span>
+                              </button>
+                            </a>
+                            
                           </div>
                           <div class="col-2">
                             <a id="runCollection" onclick="run()">
@@ -100,7 +104,7 @@
                               </svg>
                             </a>
                             <hr>
-                            <a id="other">
+                            <a id="runCollection">
                               <svg class="bi bi-three-dots" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M3 9.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z" clip-rule="evenodd"/>
                               </svg>
@@ -108,20 +112,22 @@
                             
                           </div>
                         </div>
-                        <div class="row" id="apiInCollection">
-                          <div class="col-2"></div>
-                          <div class="col-10">
-                            <% for(let j=0;j<rs.listApi.length;j++){
-                              if(rs.listApi[j].casetest == rs.listCollection[i].casetest){ %>
-                                
-                                  <hr>
-                                  <span style="color: #FFD700;"><%=rs.listApi[j].method %></span>
+                        <div class="collapse multi-collapse" id="api<%=row.casetest%>">
+                          <div class="row">
+                            <hr>
+                            <div class="col-2"></div>
+                            <div class="col-10">
+                              <% for(let j=0;j<rs.listApi.length;j++){
+                                if(rs.listApi[j].casetest == rs.listCollection[i].casetest){ %>
+                                  <a href="#">
+                                    <span style="color: #FFD700;"><%=rs.listApi[j].method %></span>
                                     <p><%=rs.listApi[j].url %></p>
-                                    <hr>
-                                
-                            <%  }
-                            }%>
+                                  </a> 
+                              <%  }
+                              }%>
+                            </div>
                           </div>
+                          
                         </div>
                       <% }}%>
                   </div>
