--- a/apiMonitoring/public/stylesheets/style.css
+++ b/apiMonitoring/public/stylesheets/style.css
@@ -293,9 +293,9 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   border-radius: 5px;
 }
 #runCollection :hover{
-  background-color: white;
-  height: 40px;
-  width: 50px;
+  background-color: rgb(218, 213, 213);
+  height: 30px;
+  width: 30px;
 }
 /* panel left */
 #history .ul-history{
@@ -450,4 +450,83 @@ input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   border: 1px solid #CDC9C9;
   padding: 10px;
   padding: 5px 15px 5px 15px;
+}
+footer{
+  padding-top: 50px;
+  height: 300px;
+  background-color: rgb(216, 212, 212);
+}
+.site-footer
+{
+  background-color:#26272b;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#737373;
+}
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
+}
+.site-footer hr.small
+{
+  margin:20px 0
+}
+.site-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.site-footer a
+{
+  color:#737373;
+}
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+.copyright-text
+{
+  margin:0
 }
