--- a/apiMonitoring/views/header.ejs
+++ b/apiMonitoring/views/header.ejs
@@ -14,9 +14,10 @@
                 <button class="dropdown-item" type="button">Something..</button>
               </div>
             </div>
-            <a style="color: white;">Home</a>
-            <a style="color: white;">About Us</a>
-            <a style="color: white;">Contact</a>
+            <a href="/" style="color: white; font-weight: 600; font-size: 20px;">Home</a>
+            <a href="#" style="color: white; font-weight: 600; font-size: 20px;">Walkthrough</a>
+            <a href="#" style="color: white; font-weight: 600; font-size: 20px;">About Us</a>
+            <a href="#" style="color: white; font-weight: 600; font-size: 20px;">Contact</a>
             <form class="form-inline">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="width: 200px;">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit"">Search</button>
