--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -21,10 +21,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
     
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
-                  <li class="nav-item" style="width: 200px;">
+                  <li class="nav-item" style="width: 50%;">
                     <a class="nav-link" id="history-tab" data-toggle="tab" href="#history" role="tab" aria-controls="history" aria-selected="true">History</a>
                   </li>
-                  <li class="nav-item" style="width: 200px;">
+                  <li class="nav-item" style="width: 50%;">
                     <a class="nav-link" id="collection-tab" data-toggle="tab" href="#collection" role="tab" aria-controls="collection" aria-selected="false">Collection</a>
                   </li>
                 
@@ -81,10 +81,8 @@
                               </svg>
                             </a>
                             <hr>
-                            <a id="runCollection">
-                              <svg class="bi bi-three-dots" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M3 9.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z" clip-rule="evenodd"/>
-                              </svg>
+                            <a id="runCollection" href="/removeCollection/<%= row.casetest%>">
+                              <img src="images/remove.png" style="height: 25px; width: 25px;">
                             </a>
                             
                           </div>
