trang get start

--- a/apiMonitoring/views/runCollection.ejs
+++ b/apiMonitoring/views/runCollection.ejs
@@ -69,5 +69,7 @@
             <div class="col-sm-1"></div>
         </div>
       <%include footer.ejs %>
+      <script language="javascript" src="../javascripts/supCollection.js"></script>
   </body>
+  
 </html>
