--- a/apiMonitoring/views/runCollection.ejs
+++ b/apiMonitoring/views/runCollection.ejs
@@ -22,10 +22,10 @@
                         <div class="row">
                           <div class="col-2"></div>
                           <div class="col-3">
-                            <p style="margin-left: 50px; font-style: inherit; font-weight: 500; color: rgb(74, 75, 74);">Enviroment</p>
-                            <p style="margin-left: 50px; font-style: inherit; margin-top: 30px; font-weight: 500; color: rgb(74, 75, 74);">Iteration</p>
-                            <p style="margin-left: 50px; font-style: inherit; margin-top: 30px; font-weight: 500; color: rgb(74, 75, 74);">Delay</p>
-                            <p style="margin-left: 50px; font-style: inherit; margin-top: 30px; font-weight: 500; color: rgb(74, 75, 74);">Data</p>
+                            <p style="margin-left: 0px; font-style: inherit; font-weight: 500; color: rgb(74, 75, 74);">Enviroment</p>
+                            <p style="margin-left: 0px; font-style: inherit; margin-top: 30px; font-weight: 500; color: rgb(74, 75, 74);">Iteration</p>
+                            <p style="margin-left: 0px; font-style: inherit; margin-top: 30px; font-weight: 500; color: rgb(74, 75, 74);">Delay</p>
+                            <p style="margin-left: 0px; font-style: inherit; margin-top: 30px; font-weight: 500; color: rgb(74, 75, 74);">Data</p>
                           </div>
                           <div class="col-6">
                             <form action="/runCollection" method="POST" enctype = "multipart/form-data">
@@ -40,7 +40,7 @@
                               <br>
                               <input name="data" type="file" style="height: 40px; width: 100px; border-radius: 4px;margin-top: 20px; border-style: ridge;">
                               <br>
-                              <input type="submit" class="btn-primary" style="height: 50px; width: 100px; margin-bottom: 40px;margin-top: 40px; font-weight: 600;" value="run <%=apiList[0].casetest %>"></button>
+                              <input type="submit" class="btn-primary" style="height: 50px; width: 100px; margin-bottom: 40px;margin-top: 40px; font-weight: 600; border-radius: 5px;" value="Run <%=apiList[0].casetest %>"></button>
                             </form>
                             
                           </div>
