--- a/apiMonitoring/views/header.ejs
+++ b/apiMonitoring/views/header.ejs
@@ -15,7 +15,7 @@
               </div>
             </div>
             <a href="/" style="color: white; font-weight: 600; font-size: 20px;">Home</a>
-            <a href="#" style="color: white; font-weight: 600; font-size: 20px;">Walkthrough</a>
+            <!-- <a href="#" style="color: white; font-weight: 600; font-size: 20px;">Walkthrough</a> -->
             <a href="#" style="color: white; font-weight: 600; font-size: 20px;">About Us</a>
             <a href="#" style="color: white; font-weight: 600; font-size: 20px;">Contact</a>
             <form class="form-inline">
