--- a/apiMonitoring/views/collectionResult.ejs
+++ b/apiMonitoring/views/collectionResult.ejs
@@ -10,17 +10,104 @@
   </head>
   <body>
       <%include header.ejs %>
+        <div class="row" id="loading" style="display: block; margin-left: 30px;">
+          <div class="spinner-grow text-primary" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          <div class="spinner-grow text-secondary" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          <div class="spinner-grow text-success" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
         <div class="row">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-10" style="border-radius: 4px; border-style: ridge; margin-bottom: 100px; margin-top: 30px;">
-                <span>0</span>
-                <span style="color: green;">Passed</span>
-                <br>
-                <span>0</span>
-                <span style="color: red;">Failed</span>
+            <div class="col-sm-12" style="border-radius: 4px; border-style: ridge; margin-top: 5px; margin-left: 20px; margin-right: 20px;">
+                <div class="row">
+                  <div class="col-1">
+                    <div class="circle" id="circle_pass">
+                      <p style="margin-left: 40%; margin-top: 20%; color:green; font-weight: 600;"> 0 </p>
+                      <p style="color: green; font-weight: 600;margin-top: -25%;margin-left: 15%;">Passed</p>
+                    </div>
+                  </div>
+                  <div class="col-1">
+                    <div class="circle" id="circle_fail">
+                      <p style="margin-left: 40%; margin-top: 20%; color:red; font-weight: 600;"> 0 </p>
+                      <p style="color: red; font-weight: 600;margin-top: -25%;margin-left: 20%;">Failed</p>
+                    </div>
+                  </div>
+                  <div class="col-1">
+                    <p id="caseTest" style="font-size: 25px; font-weight: 500; color: rgb(106, 108, 109); margin-top: 5px;"><%=apiResult[0].casetest %></p>
+                    <p style="color: rgb(173, 173, 173); font-weight: 600; margin-left: 10%; margin-top: -15px;">Just now</p>
+                  </div>
+                  <div class="col-1">
+                    <p style="font-size: 25px; font-weight: 500; color: rgb(106, 108, 109); margin-top: 5px; border-right: darkgreen; border-left: darkgreen;">Iteration</p>
+                    <p id="interation" style="color: rgb(173, 173, 173); font-weight: 600; margin-left: 30%; margin-top: -15px;"> <%=iteration%> </p>
+                  </div>
+                  <div class="col-1">
+                    <p style="font-size: 25px; font-weight: 500; color: rgb(106, 108, 109); margin-top: 5px;">Delay</p>
+                    <p id="delay" style="color: rgb(173, 173, 173); font-weight: 600; margin-left: 5%; margin-top: -15px;"> <%=delay %> ms </p>
+                  </div>
+                  <div class="col-4"></div>
+                  <div class="col-3">
+                    <button class="btn-export" style="margin-top: 15px; background-color: rgb(35, 65, 240); height: 50px; color: white;border-radius: 4px; border-style: ridge;border-color: rgb(57, 198, 241);">export json</button>
+                    <span>
+                      <button style="margin-left: 20px; background-color: rgb(255, 145, 71);height: 50px;border-radius: 4px; border-style: ridge;border-color: rgb(57, 198, 241);" >Gửi email</button>
+                    </span>
+                    <span>
+                      <button style="margin-left: 20px; background-color: rgb(199, 241, 10);height: 50px;border-radius: 4px; border-style: ridge;border-color: rgb(57, 198, 241);" >Đồ thị</button>
+                    </span>
+                  </div>
+                </div>
             </div>
-            <div class="col-sm-1"></div>
+        </div>
+        <div class="row" style="height: 700px; background-color: rgb(218, 214, 214);">
+          <div class="col-sm-12">
+            <div class="my-custom-scrollbar my-custom-scrollbar-primary" style="margin-top: 30px; background-color: white;">
+              <div class="row" style="height: 100%;">
+                <div class="col-1">
+                  <div class="shape" style="height: 30px; width: 30px; background-color: springgreen; margin-left: 30px; margin-top: 25px;">
+                    <span class="text">OK</span>
+                  </div>
+                  <div class="shape" style="height: 30px; width: 30px; background-color: red; margin-left: 30px; margin-top: 10px;">
+                    <span class="text">Not ok</span>
+                  </div>
+                </div>
+                <div class="col-10" style="margin-top: 20px;">
+                  <form class="formResult" style="border-style: ridge; margin: 5px; border-color: rgb(160, 217, 250);padding: 10px;">
+                    <p id="iteration">Iteration 1</p>
+                    <% if(apiResult){
+                      for(let i=0; i<apiResult.length; i++){
+                        let api = apiResult[i]; %>
+                        <div id="rowApi" class="row" style="height: 50px;;margin: 5px;margin-left: 20px; border-style: ridge; border-color: rgb(236, 232, 232); padding-top: 5px;">
+                          <% if(api.statusCode == 200){%>
+                            <div class="shape" style="height: 30px; width: 30px; border: 10px; background-color: springgreen; margin-left: 10px;"></div>
+                          <%}else{%>
+                            <div class="shape" style="height: 30px; width: 30px; border: 10px; background-color: rgb(255, 0, 0); margin-left: 10px;"></div>
+                          <%}%>
+                          <span style="color: rgb(49, 40, 173); margin-left: 10px;"><%= api.method %></span>
+                          <span style="color: grey; margin-left: 10px;"><%= api.url%></span>
+                          <span>
+                            <div class="shape circle" style="height: 20px; width: 20px; border: 10px; background-color: gray; margin-left: 30px;"></div>
+                          </span>
+                          <span style="color: grey;margin-left: 10px;"><%= api.statusCode %></span>
+                          <span style="color: rgb(238, 177, 11); margin-left: 10px;"><%= api.status %></span>
+                        </div>
+                    <%}
+                    }%>
+                  </form>
+                  
+                </div>
+                <div class="col-1"></div>
+              </div>
+            </div>
+          </div>
         </div>
       <%include footer.ejs %>
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/nqpm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script language="javascript" src="/javascripts/collection.js"></script>
   </body>
 </html>
