import collection postman

--- a/apiMonitoring/views/index.ejs
+++ b/apiMonitoring/views/index.ejs
@@ -171,8 +171,31 @@
                 
                
               </div>
+
               <!-- end modal -->
              
+              <div class="collapse" id="ModalImportCollection">
+                <div class="form-import">
+                  <div class="form-header">
+                    <h4>IMPORT</h4>
+                  </div>
+                  <hr>
+                  <div class="form-body">
+                    <div class="url">
+                      <p>Enter a URL</p>
+                      <input class="url-import" name="url-import">
+                    </div>
+                    <br>
+                  </div>
+                  <hr>
+                  <div class="form-footer">
+                    <button type="button" class="btn btn-primary import-collection">Continute</button>
+                    <button type="button" class="btn btn-secondary close-modal-collection">Cancel</button>
+                  </div>
+                </div>
+                
+               
+              </div>
               <br>
               <hr>
               
