--- a/apiMonitoring/public/stylesheets/style.css
+++ b/apiMonitoring/public/stylesheets/style.css
@@ -816,3 +816,43 @@ header {
   font-family:  Arial, Helvetica, sans-serif ;
   margin-top: 5px;
 }
+
+#ModalImportCollection{
+  z-index: 9999!important;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+#ModalImportCollection .form-import{
+  border: 1px solid #ccc;
+  /* text-align: center; */
+  margin-top: 5%;
+  margin-left: 25%;
+  width: 50%;
+  background: white;
+}
+#ModalImportCollection .form-import .form-header h4{
+  font-family: "Segoe UI",Arial,sans-serif;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+#ModalImportCollection .form-import .form-body{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+#ModalImportCollection .form-import .form-body .url input{
+  width: 100%;
+  border-radius: 5px;
+}
+#ModalImportCollection .form-import .form-footer{
+  text-align: center;
+  padding: 10px;
+}
+#ModalImportCollection .form-import .form-footer .btn{
+  width: 100px!important;
+}
