--- a/apiMonitoring/views/collectionResult.ejs
+++ b/apiMonitoring/views/collectionResult.ejs
@@ -25,13 +25,13 @@
             <div class="col-sm-12" style="border-radius: 4px; border-style: ridge; margin-top: 5px; margin-left: 20px; margin-right: 20px;">
                 <div class="row">
                   <div class="col-1">
-                    <div class="circle" id="circle_pass">
+                    <div class="circle" id="circle_pass" style="display: none;">
                       <p style="margin-left: 40%; margin-top: 20%; color:green; font-weight: 600;"> 0 </p>
                       <p style="color: green; font-weight: 600;margin-top: -25%;margin-left: 15%;">Passed</p>
                     </div>
                   </div>
                   <div class="col-1">
-                    <div class="circle" id="circle_fail">
+                    <div class="circle" id="circle_fail" style="display: none;">
                       <p style="margin-left: 40%; margin-top: 20%; color:red; font-weight: 600;"> 0 </p>
                       <p style="color: red; font-weight: 600;margin-top: -25%;margin-left: 20%;">Failed</p>
                     </div>
@@ -94,6 +94,7 @@
                           </span>
                           <span style="color: grey;margin-left: 10px;"><%= api.statusCode %></span>
                           <span style="color: rgb(238, 177, 11); margin-left: 10px;"><%= api.status %></span>
+                          <span style="color: rgb(4, 88, 22); margin-left: 10px;"><%= api.timeRequest %> ms</span>
                         </div>
                     <%}
                     }%>
